--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -10,9 +10,9 @@
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/porridge"
+        tools:src="@drawable/porridge"
         android:layout_weight="1"
-        android:id="@+id/recipe_image"/>
+        android:id="@+id/item_recipe_image"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +23,7 @@
         android:textAlignment="viewStart"
         android:layout_marginStart="8dp"
         android:layout_weight="50"
-        android:id="@+id/recipe_name"/>
+        android:id="@+id/item_recipe_name"/>
 
     <ImageView
         android:layout_width="24dp"
