--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is main activity!"
-        app:layout_constraintBottom_toBottomOf="@+id/main_activity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <androidx.fragment.app.FragmentContainerView xmlns:tools="http://schemas.android.com/tools"
-    android:background="#33333333"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_activity">
 
-    </androidx.fragment.app.FragmentContainerView>
+    <Button
+        android:id="@+id/random_recipe_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Show random recipe"
+        android:textSize="26sp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/recipes_list_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Show recipes list"
+        android:textSize="26sp"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/random_recipe_button" />
+
+    <Button
+        android:id="@+id/shopping_list_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Show shopping list"
+        android:textSize="26sp"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recipes_list_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
