--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="16dp"
-    android:gravity="right">
+    android:gravity="end">
 
     <ImageView
         android:layout_width="48dp"
@@ -16,7 +16,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:text="Porridge"
         android:textSize="24sp"
         android:textStyle="bold"
